add static broadcast receiver.

--- a/BroadcastTest/app/src/main/AndroidManifest.xml
+++ b/BroadcastTest/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.xw3278.broadcasttest">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -22,7 +23,11 @@
         <receiver
             android:name=".BootCompleteReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
