update broadcast project

--- a/BroadcastTest/app/src/main/AndroidManifest.xml
+++ b/BroadcastTest/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.xw3278.broadcasttest">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -26,6 +26,14 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".MyBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.xw3278.broadcasttest.MY_BROADCAST" />
             </intent-filter>
         </receiver>
     </application>
